--- a/simulation.tex
+++ b/simulation.tex
@@ -16,7 +16,7 @@
 \begin{document}
 
 % \title{Simulated Exoplanet Photometry with High-Motion Space Telescope Detectors}
-\title{Simulated Photometry in the Case of Low Pointing-Precision \textit{K2} Observations}
+\title{Simulated CCD Photometry: Low Pointing-Precision \textit{K2} Observations}
 
 \author{Nicholas Saunders \altaffilmark{1,2,3}, Rodrigo Luger \altaffilmark{1,2}, Rory Barnes \altaffilmark{1,2}}
 
