--- a/simulation.tex
+++ b/simulation.tex
@@ -77,7 +77,7 @@ This is the same model we fit to the simple aperture photometry (SAP) flux of \t
 
 Our model for the sensitivity variation was chosen to capture the same noise magnitude as real \textit{K2} targets. For our noise metric, we use the Combined Differential Photometric Precision for consistency with \cite{2016AJ....152..100L}. We used a two-step benchmarking process to estimate the magnitude of variation in quantum sensitivity and contribution by photon noise and background noise. First we considered the no-motion case. For a large population of simulated targets with randomly generated stellar magnitude and detector position, the noise versus magnitude trend should closely follow that of the original \textit{Kepler} mission. The results of  benchmark test one are shown in Figure \ref{fig:nomotion}, where we plot the CDPP of our simulated light curves with no motion against CDPP of original \textit{Kepler} light curves as a function of $Kp$ Mag.
 
-To best capture the characteristics of \textit{K2} data when analyzing the noise contributed by quantum sensitivity variation, our model also included two sources of synthetic noise -- photon and background noise.
+To best capture the characteristics of \textit{K2} data when analyzing the noise contributed by quantum sensitivity variation, our model also included two sources of synthetic noise -- photon noise and background noise -- which contribute to the trend of increased noise for higher magnitude targets. Our first benchmarking test serves to constrain the levels of injected photon noise and background noise.
 
 \begin{figure}[h]
 	\centering
@@ -86,14 +86,30 @@ To best capture the characteristics of \textit{K2} data when analyzing the noise
 	\label{fig:nomotion}
 \end{figure}
 
-In Figure \ref{fig:1motion}, we inject motion from the \textit{K2} target EPIC 205998445 to benchmark our model against \textit{K2} data. This target is a  \textit{K2} C03 star with $Kp = 12.029$ located near the edge of its detector. The noise of our various tests bracket the trend of raw \textit{K2} noise, again following the photon-limited trend due to no variability.
+In our second benchmarking test, we consider the case of current \textit{K2} motion. To do so, we inject motion from 1000 cadences of the \textit{K2} target EPIC 205998445 to benchmark our model against \textit{K2} data. This target is a  \textit{K2} C03 star with $Kp = 12.029$ located near the edge of its detector. Statistics about the motion data used in our simulation can be found in Table \ref{table:motionstatistics}.
 
-We found that a stochastic distribution of sensitivity with ${\sim}1\%$ variation between pixels and ${\sim}5\%$ variation within pixels, from center to edge. A sample detector with included sensitivity variation can be seen in Figure \ref{fig:detector_sensitivity}.
+\begin{table}[h!]
+\begin{center}
+    \begin{tabular}{c | c | c}
+        Motion Coefficient & Motion (pixels) & Max Motion (pixels) \\
+        \hline \hline
+        1 & $0.37\pm0.16$ & 0.56 \\
+        2 & $0.38\pm0.32$ & 1.12 \\
+				5 & $1.04\pm0.75$ & 2.8 \\
+				10 & $2.04\pm1.75$ & 6.6 \\
+				20 & $3.16\pm1.75$ & 11.2 \\
+   \end{tabular}
+	 \caption{Motion coefficients and corresponding pixel motion.}
+	 \label{table:motionstatistics}
+\end{center}
+\end{table}
+
+With real \textit{K2} motion applied, sensitivity variation parameters were adjusted until CDPP versus $Kp$ Mag correspended to the trend of real \textit{K2} observations. We found that a stochastic distribution of sensitivity with ${\sim}1\%$ variation between pixels and ${\sim}5\%$ variation within pixels, from center to edge. A sample detector with included sensitivity variation can be seen in Figure \ref{fig:detector_sensitivity}.
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=.5\linewidth]{k2_benchmark.pdf}
-	\caption{CDPP of our simulated light curves with \textit{K2} motion compared to real \textit{K2} targets as a function of $K_p\ Mag$.}
+	\caption{CDPP of our simulated light curves with \textit{K2} motion compared to real \textit{K2} targets as a function of $Kp$ Mag.}
 	\label{fig:1motion}
 \end{figure}
 
@@ -109,22 +125,6 @@ For campaigns up to 17, stellar PSFs already traverse various regions of sensiti
 \subsection{High Roll}
 
 To test how PLD performs on targets with high motion relative to the detector, we inject motion vectors with various coefficients into our synthetic models. A coefficient of 1 corresponds to physical \textit{K2} motion (maximum of $\sim 0.56$ pixels), while a coefficient of 20 results in motion of up to $11.2$ pixels.
-
-\begin{table}[h!]
-\begin{center}
-    \begin{tabular}{c | c | c}
-        Motion Coefficient & Motion (pixels) & Max Motion (pixels) \\
-        \hline \hline
-        1 & $0.37\pm0.16$ & 0.56 \\
-        2 & $0.38\pm0.32$ & 1.12 \\
-				5 & $1.04\pm0.75$ & 2.8 \\
-				10 & $2.04\pm1.75$ & 6.6 \\
-				20 & $3.16\pm1.75$ & 11.2 \\
-   \end{tabular}
-	 \caption{Motion coefficients and corresponding pixel motion.}
-	 \label{table:1}
-\end{center}
-\end{table}
 
 The resulting raw light curve noise can be seen in Fig. \ref{fig:rawmotion} compared to raw \textit{K2} noise. Our synthetic targets with a motion coefficient of 1 align with the raw \textit{K2} trend and increase corresponding to noise coefficient.
 
