--- a/simulation.tex
+++ b/simulation.tex
@@ -82,7 +82,7 @@ To best capture the characteristics of \textit{K2} data when analyzing the noise
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=.5\linewidth]{kepler_benchmark.pdf}
-	\caption{Photometric precision of our simulated light curves with no motion compared to original \textit{Kepler} targets as a function of $Kp$ Mag. The yellow trend represents the noise as a function of }
+	\caption{Photometric precision of our simulated light curves with no motion compared to original \textit{Kepler} targets as a function of $Kp$ Mag. The red trend demonstrates the noise value of }
 	\label{fig:nomotion}
 \end{figure}
 
