--- a/simulation.tex
+++ b/simulation.tex
@@ -26,22 +26,22 @@
 
 \begin{abstract}
 
-	We present \texttt{scope} (Simulated CCD Observations for Photometric Experimentation), a \texttt{python} package to create a forward model of telescope detectors and simulate stellar targets with motion relative to the CCD. The primary application of this package is the simulation of the \textit{Kepler} Space Telescope detector to predict and characterize increased instrumental noise in the spacecraft's final campaigns of observation. As the fuel powering the spacecraft's stabilizing thrusters runs out and thruster fires begin to sputter, stellar Point Spread Functions (PSFs) will experience more extreme and less predictable motion relative to regions of varied sensitivity on the spacecraft detector, generating more noise in transiting exoplanet light curves. Using our simulations, we demonstrate that current de-trending techniques  effectively capture and remove systematics caused by sensitivity variation for targets with up to 10x current \textit{K2} spacecraft motion. The \texttt{scope} package is open-source has been generalized to allow custom detector and target parameters. Future applications include simulating observations made by the Transiting Exoplanet Survey Satellite (\textit{TESS}), photometry and spectroscopy by the James Webb Space Telescope (\textit{JWST}), and ground based observations with synthetic atmospheric interference as testbeds for noise-removal techniques.
+	We present \texttt{scope} (Simulated CCD Observations for Photometric Experimentation), a \texttt{python} package to create a forward model of telescope detectors and simulate stellar targets with motion relative to the CCD. The primary application of this package is the simulation of the \textit{Kepler} Space Telescope detector to predict and characterize increased instrumental noise in the spacecraft's final campaigns of observation. As the fuel powering the spacecraft's stabilizing thrusters runs out and thruster fires begin to sputter or fail, stellar Point Spread Functions (PSFs) will experience more extreme and less predictable motion relative to regions of varied sensitivity on the spacecraft detector, generating more noise in transiting exoplanet light curves. Using our simulations, we demonstrate that current de-trending techniques  effectively capture and remove systematics caused by sensitivity variation for targets with up to 10x current \textit{K2} spacecraft motion. The \texttt{scope} package is open-source has been generalized to allow custom detector and stellar target parameters. Future applications include simulating observations made by the Transiting Exoplanet Survey Satellite (\textit{TESS}), photometry and spectroscopy by the James Webb Space Telescope (\textit{JWST}), and ground based observations with synthetic atmospheric interference as testbeds for noise-removal techniques.
 
 \end{abstract}
 
 \section{Introduction}
 \label{sec:intro}
 
-Despite the failure of two reaction wheels in 2012 and 2013, the \textit{Kepler} Space Telescope has continued to produce valuable data in its new configuration, \textit{K2}, with significantly higher precision than ground based telescopes \citep{2014PASP..126..398H}. However, due to the unstable pointing caused by the missing reaction wheels, targets have significant motion relative to the quantum sensitivity variation of the telescope detector, creating noise in \textit{K2} light curves. A number of attempts have been made to isolate and remove the instrumental noise from \textit{K2} data \citep{2015A&A...579A..19A, 0004-637X-806-1-30, 2015MNRAS.454.4159H, 2015MNRAS.447.2880A, 2016MNRAS.459.2408A}.
+Despite the failure of two reaction wheels in 2012 and 2013, the \textit{Kepler} Space Telescope has continued to produce valuable data in its new configuration, \textit{K2}, with significantly higher precision than ground based telescopes \citep{2014PASP..126..398H}. However, due to the unstable pointing caused by the missing reaction wheels, targets have significant motion relative to the quantum sensitivity variation of the telescope detector, creating noise in \textit{K2} light curves. A number of attempts have been made to isolate and remove the instrumental noise from \textit{K2} data \citep{2015A&A...579A..19A, 0004-637X-806-1-30, 2015MNRAS.454.4159H, 2015MNRAS.447.2880A, 2016MNRAS.459.2408A}. Through the appication of data processing pipelines, namely the \texttt{EVEREST} pipeline developed by \cite{2016AJ....152..100L}, the noise in \textit{K2} light curves can be reduced to the level of the original \textit{Kepler} mission for up to $15^{\text{th}}$ magnitude \citep{2017arXiv170205488L}.
 
-Further, as the \textit{Kepler} Space Telescope runs out of fuel, its motion due to thruster fires is expected to become less predictable and the magnitude of targets' motion relative to the detector will increase. With higher motion, targets will traverse more regions of varied pixel sensitivity, contributing more noise to the light curves of \textit{K2} targets. Eventually, when thruster fuel has been depleted entirely, the telescope will enter a phase of constant drift, at which point targets will traverse many pixels across the detector. This will increase the likelihood of flux pollution from neighbors, as stellar PSFs may overlap over the course of a campaign.
+However, as the \textit{Kepler} Space Telescope runs out of fuel, its motion due to thruster fires is expected to become less predictable and the magnitude of targets' motion relative to the detector will increase. With higher motion, targets will traverse more regions of varied pixel sensitivity, contributing more noise to the light curves of \textit{K2} targets. Eventually, when thruster fuel has been depleted entirely, the telescope may enter a phase of constant drift, at which point targets will traverse many pixels across the detector. This will also increase the likelihood of flux pollution from neighbors, as stellar PSFs may overlap over the course of a campaign.
 
 In this paper, we present options for characterizing these sources of noise and assessing noise-removal methods. \S 2 and \S 3 explore the issues of pixel sensitivity variation and crowding, respectively. \S 4 describes our methods to characterize and address these sources of noise: \S 4.1 focuses on PSF-fitting, \S 4.2 on Aperture-fitting, and \S 4.3 on Motion Removal. In \S 5, we discuss our results, and finally we draw our conclusions in \S 6.
 
 \section{Methods}
 
-Removal of instrumental noise requires a thorough understanding of its source. Stellar motion relative to the pixel sensitivity variation on the \textit{Kepler} CCD causes fluctuation in the amount of light received by the telescope detector. In order to accurately simulate the intrumental noise characteristic of \textit{K2} light curves, it is necessary to generate a forward model for the pixel sensitivity variation of the CCD. Light curves that were simulated using this sensitivity variation model are adequate to serve as well-understood sample targets on which to determine noise levels resulting from light curves generated under conditions of high roll magnitude and apply de-trending methods. To accurately represent the \textit{Kepler} CCD, we generated a model for the detector that included both inter-pixel sensitivity variation between pixels and intra-pixel sensitivity variation within each pixel.
+Removal of instrumental noise requires a thorough understanding of its source. Stellar motion relative to the pixel sensitivity variation on the \textit{Kepler} CCD causes fluctuation in the amount of light received by the telescope detector over time. In order to accurately simulate the intrumental noise characteristic of \textit{K2} light curves, it is necessary to generate a forward model for the pixel sensitivity variation of the CCD. Light curves that were simulated using this sensitivity variation model are adequate to serve as well-understood sample targets on which to determine noise levels resulting from light curves generated under conditions of high roll magnitude and apply de-trending methods. To accurately represent the \textit{Kepler} CCD, we generated a model for the detector that included both inter-pixel sensitivity variation between pixels and intra-pixel sensitivity variation within each pixel.
 
 \subsection{PSF Model}
 
@@ -71,22 +71,24 @@ P(x,y) & = \sum_m \frac{1}{2\pi\sigma_{x,m}\sigma_{x,n}\sqrt{1-\rho_m^2}} \text{
 %
 where $\sigma_x$, $\sigma_y$ are the standard deviations of the PSF in $x$ and $y$, and $\rho$ is the correlation coefficient between $x$ and $y$.
 
-This is the same model we fit to the simple aperture photometry (SAP) flux of \textit{K2} targets to subtract contaminant flux (further discussion in \S 4.1). The coefficients $a_n$ were determined to emulate the magnitude of sensitivity variation on the \textit{Kepler} CCD based on its contribution to the noise in \textit{K2} light curves. Sensitivity coefficients are independent in $x$ and $y$ for consistancy with the Kepler Intrument Handbook \citep{kepler_intrument_handbook}. Our method for choosing values for sensitivity variation coefficients $a_n$ is descried in the following section.
+This is the same model we fit to the simple aperture photometry (SAP) flux of \textit{K2} targets to subtract contaminant flux (further discussion in \S 4.1). The coefficients $a_n$ were determined to emulate the magnitude of sensitivity variation on the \textit{Kepler} CCD based on its contribution to the noise in \textit{K2} light curves. Sensitivity coefficients are defined as independent in $x$ and $y$ for consistancy with the Kepler Intrument Handbook \citep{kepler_intrument_handbook}. Our method for choosing values for sensitivity variation coefficients $a_n$ is descried in the following section.
 
 \subsection{Pixel Sensitivity Variation}
 
-Our model for the sensitivity variation was chosen to capture the same noise magnitude as real \textit{K2} targets. For our noise metric, we use the Combined Differential Photometric Precision for consistency with \cite{2016AJ....152..100L}. We used a two-step benchmarking process to estimate the magnitude of variation in quantum sensitivity and contribution by photon noise and background noise. First we considered the no-motion case. For a large population of simulated targets with randomly generated stellar magnitude and detector position, the noise versus magnitude trend should closely follow that of the original \textit{Kepler} mission. The results of  benchmark test one are shown in Figure \ref{fig:nomotion}, where we plot the CDPP of our simulated light curves with no motion against CDPP of original \textit{Kepler} light curves as a function of $Kp$ Mag.
+Our model for the sensitivity variation was chosen to capture the same noise magnitude as real \textit{K2} targets. For our noise metric, we use the Combined Differential Photometric Precision for consistency with \cite{2016AJ....152..100L}. We used a two-step benchmarking process to estimate the magnitude of variation in quantum sensitivity and contribution by photon noise and background noise.
 
-To best capture the characteristics of \textit{K2} data when analyzing the noise contributed by quantum sensitivity variation, our model also included two sources of synthetic noise -- photon noise and background noise -- which contribute to the trend of increased noise for higher magnitude targets. Our first benchmarking test serves to constrain the levels of injected photon noise and background noise.
+First we considered the no-motion case. For a large population of simulated targets with randomly generated stellar magnitude and detector position, the noise versus magnitude trend should closely follow that of the original \textit{Kepler} mission. The results of  benchmark test one are shown in Figure \ref{fig:nomotion}, where we plot the CDPP of our simulated light curves with no motion against CDPP of original \textit{Kepler} light curves as a function of \textit{Kepler} Magnitude ($Kp$ Mag).
+
+To most accurately capture the characteristics of \textit{K2} data when analyzing the noise contributed by quantum sensitivity variation, our model also included two sources of synthetic noise -- photon noise and background noise -- which contribute to the trend of increased noise for higher magnitude targets. Our first benchmarking test serves to constrain the levels of injected photon noise and background noise.
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=.5\linewidth]{kepler_benchmark.pdf}
-	\caption{Photometric precision of our simulated light curves with no motion compared to original \textit{Kepler} targets as a function of $Kp$ Mag. The red trend demonstrates the noise value of }
+	\caption{Photometric precision of our simulated light curves with no motion compared to original \textit{Kepler} targets as a function of $Kp$ Mag. The red trend demonstrates the noise contribution due to photon and background noise.}
 	\label{fig:nomotion}
 \end{figure}
 
-In our second benchmarking test, we consider the case of current \textit{K2} motion. To do so, we inject motion from 1000 cadences of the \textit{K2} target EPIC 205998445 to benchmark our model against \textit{K2} data. This target is a  \textit{K2} C03 star with $Kp = 12.029$ located near the edge of its detector. Statistics about the motion data used in our simulation can be found in Table \ref{table:motionstatistics}.
+In our second benchmarking test, we consider the case of current \textit{K2} motion. To accomplish this, we injected motion from 1000 cadences of the \textit{K2} target EPIC 205998445, creating a simulated example of a current observation to benchmark our model against \textit{K2} data. EPIC 205998445 is a \textit{K2} C03 star with $Kp = 12.029$ located near the edge of its detector. Statistics about the motion data used in our simulation can be found in Table \ref{table:motionstatistics}.
 
 \begin{table}[h!]
 \begin{center}
@@ -99,12 +101,12 @@ In our second benchmarking test, we consider the case of current \textit{K2} mot
 				10 & $2.04\pm1.75$ & 6.6 \\
 				20 & $3.16\pm1.75$ & 11.2 \\
    \end{tabular}
-	 \caption{Motion coefficients and corresponding pixel motion.}
+	 \caption{Motion coefficients and corresponding pixel motion for \textit{K2} C03 target EPIC 205998445.}
 	 \label{table:motionstatistics}
 \end{center}
 \end{table}
 
-With real \textit{K2} motion applied, sensitivity variation parameters were adjusted until CDPP versus $Kp$ Mag correspended to the trend of real \textit{K2} observations. We found that a stochastic distribution of sensitivity with ${\sim}1\%$ variation between pixels and ${\sim}5\%$ variation within pixels, from center to edge. A sample detector with included sensitivity variation can be seen in Figure \ref{fig:detector_sensitivity}.
+With real \textit{K2} motion applied, sensitivity variation parameters were adjusted until CDPP versus $Kp$ Mag correspended to the trend of real \textit{K2} observations. We found that a stochastic distribution of sensitivity with ${\sim}1\%$ variation between pixels and ${\sim}5\%$ variation within pixels, from center to edge resulted in benchmark test two following the expected trend most similarly. A sample detector with included sensitivity variation can be seen in Figure \ref{fig:detector_sensitivity}.
 
 \begin{figure}[h]
 	\centering
@@ -118,7 +120,7 @@ For campaigns up to 17, stellar PSFs already traverse various regions of sensiti
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=1.0\linewidth]{detector_sensitivity.eps}
-	\caption{(a) A sample detector with sensitivity variation, where white represents 100\% photon capture rate, and the shaded regions have lower values for quantum sensitivity. Note that our model peaks in sensitivity at the center of each pixel and falls off towards the edges. There is also random variation in sensitivity between pixels. (b) A Stellar PSF mathematically simulated onto the detector at the sub-pixel level. The sensitivity variation has been exaggerated in this simulation to demonstrate the variation in sub-pixel fluxes. (c) The final interpolated image. The value of each pixel is the integral over $x$ and $y$ of the sub-pixel flux.}
+	\caption{(a) A sample detector with sensitivity variation and no stellar targets, where white represents 100\% photon capture rate, and the shaded regions have lower values for quantum sensitivity. Note that our model peaks in sensitivity at the center of each pixel and falls off towards the edges. There is also random variation in sensitivity between pixels. (b) A Stellar PSF mathematically simulated onto the detector at the sub-pixel level. The sensitivity variation has been exaggerated in this simulation to demonstrate the variation in sub-pixel fluxes. (c) The final interpolated image. The value of each pixel is the integral over $x$ and $y$ of the sub-pixel flux.}
 	\label{fig:detector_sensitivity}
 \end{figure}
 
@@ -235,13 +237,11 @@ star.Detrend()
 \end{lstlisting}
 \section{Conclusions}
 
-We have created a forward model of the \textit{Kepler} space telescope detector, \texttt{skope}, which includes inter- and intra-pixel sensitivity variation and mathematical simulations of stellar PSFs to test de-trending methods for exoplanet targets. Using these simulations, we have demonstrated that \texttt{EVEREST} and PLD are  capable of reducing systematic noise to higher precision than ground based observations in \textit{K2} light curves with up to 10x current spacecraft motion. We have shown that in the event of spacecraft thruster sputtering due to diminishing fuel reserves, valuable data can still be collected and analyzed to benefit \textit{K2} science goals.
+We have created a forward model of the \textit{Kepler} space telescope detector, \texttt{scope}, which includes inter- and intra-pixel sensitivity variation and mathematical simulations of stellar PSFs to test de-trending methods for exoplanet targets. Using these simulations, we have demonstrated that \texttt{EVEREST} and PLD are  capable of reducing systematic noise to higher precision than ground based observations in \textit{K2} light curves with up to 10x current spacecraft motion. We have shown that in the event of spacecraft thruster sputtering due to diminishing fuel reserves, valuable data can still be collected and analyzed to benefit \textit{K2} science goals.
 
 Though \textit{TESS}, the successor to \textit{Kepler}, has launched, there remains a wealth of both existing and unobserved \textit{K2} data that offers valuable contribution to our understanding of exoplanetary systems. Earthlike exoplanets can be difficult to identify in the high-magnitude noise of current \textit{K2} data, which will continue to get noisier as the mission reaches its conclusion. The methods we have presented aim to produce the most precise exoplanet identification, characterization, and analysis from the data we have available, and prepare for the next generation of space telescopes.
 
-\textcolor{red}{Acknowledgements.}
-
-This work was supported by NASA grant NNX14AK26G. Computing for this research was performed on the Hyak supercomputer system at the University of Washington.
+This work was supported by NASA grant NNX14AK26G and by the NASA Astrobiology Institute's Virtual Planetary Laboratory. Computing for this research was performed on the Hyak supercomputer system at the University of Washington.
 
 \clearpage
 \bibliographystyle{aasjournal}
