update pip install

--- a/simulation.tex
+++ b/simulation.tex
@@ -212,9 +212,7 @@ Seeing aberation and atmospheric interference are additional sources of noise th
 All of our code is open-source and publically available online. Our simulation package can be installed by running
 %
 \begin{lstlisting}[language=bash]
-git clone https://github.com/nksaunders/scope
-cd scope
-python setup.py install
+pip install tele-scope
 \end{lstlisting}
 %
 To create a light curve with \texttt{scope}, first instantiate a \texttt{Target} object:
