--- a/simulation.tex
+++ b/simulation.tex
@@ -26,7 +26,7 @@
 
 \begin{abstract}
 
-	We present \texttt{scope} (Simulated CCD Observations for Photometric Experimentation), a \texttt{python} package to create a forward model of telescope detectors and simulate stellar targets with motion relative to the CCD. The primary application of this package is the simulation of the \textit{Kepler} Space Telescope detector to predict and characterize increased instrumental noise in the spacecraft's final campaigns of observation. As the fuel powering the spacecraft's stabilizing thrusters runs out and thruster fires begin to sputter or fail, stellar Point Spread Functions (PSFs) will experience more extreme and less predictable motion relative to regions of varied sensitivity on the spacecraft detector, generating more noise in transiting exoplanet light curves. Using our simulations, we demonstrate that current de-trending techniques  effectively capture and remove systematics caused by sensitivity variation for targets with up to 10x current \textit{K2} spacecraft motion. The \texttt{scope} package is open-source has been generalized to allow custom detector and stellar target parameters. Future applications include simulating observations made by the Transiting Exoplanet Survey Satellite (\textit{TESS}), photometry and spectroscopy by the James Webb Space Telescope (\textit{JWST}), and ground based observations with synthetic atmospheric interference as testbeds for noise-removal techniques.
+	We present \texttt{scope} (Simulated CCD Observations for Photometric Experimentation), a \texttt{python} package to create a forward model of telescope detectors and simulate stellar targets with motion relative to the CCD. The primary application of this package is the simulation of the \textit{Kepler} Space Telescope detector to predict and characterize increased instrumental noise in the spacecraft's final campaigns of observation. As the fuel powering the spacecraft's stabilizing thrusters runs out and thruster fires begin to sputter or fail, stellar Point Spread Functions (PSFs) will experience more extreme and less predictable motion relative to regions of varied sensitivity on the spacecraft detector, generating more noise in transiting exoplanet light curves. Using our simulations, we demonstrate that current de-trending techniques  effectively capture and remove systematics caused by sensitivity variation for spacecraft motion as high as about ten times that currently experienced by \textit{K2}. The \texttt{scope} package is open-source has been generalized to allow custom detector and stellar target parameters. Future applications include simulating observations made by the Transiting Exoplanet Survey Satellite (\textit{TESS}), photometry and spectroscopy by the James Webb Space Telescope (\textit{JWST}), and ground based observations with synthetic atmospheric interference as testbeds for noise-removal techniques.
 
 \end{abstract}
 
@@ -45,18 +45,18 @@ Removal of instrumental noise requires a thorough understanding of its source. S
 
 \subsection{PSF Model}
 
-A stellar PSF was generated with a characteristic two-dimensional Gaussian shape and with covariance between $x$ and $y$ dimensions to capture PSF distortion due to incident light aberration on the \textit{Kepler} detector. We define our mathematical model for $F(t)$, the total flux received by the telescope detector as a function of time, to be
+A stellar PSF was generated with a characteristic two-dimensional Gaussian shape and with covariance between $x$ and $y$ dimensions to capture PSF distortion due to incident light aberration on the \textit{Kepler} detector. We define our model for $F(t)$, the total flux received by the telescope detector as a function of time, to be
 %
 \[
 \tag{1}
-F(t)=\sum_{aperture} \iint_{pixel} [s(x)s(y)P(x,y)\tau (t)]dxdy,\\
+F(t)=\sum_{aperture} \iint_{pixel} [s(x,y)P(x,y)\tau (t)]dxdy,\\
 \]
 %
 where $s(x)s(y)$ is the sensitivity variation function, modeled by a sum of polynomials, and $P(x,y)$ is the PSF of the star, centered at $(x_0,y_0)$ with amplitude $A$. $\tau (t)$ is a simulated transit function. The pixel sensitivity model is given by
 %
 \[
 \tag{2}
-s(x)s(y) = \sum_n a_{x,n}x^na_{y,n}y^n, \\
+s(x,y) = \sum_n a_{x,n}x^na_{y,n}y^n, \\
 \]
 %
 and the PSF model is given by
@@ -83,7 +83,7 @@ To most accurately capture the characteristics of \textit{K2} data when analyzin
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=.5\linewidth]{kepler_benchmark.pdf}
+	\includegraphics[width=1.0\linewidth]{kepler_benchmark.pdf}
 	\caption{Photometric precision of our simulated light curves with no motion compared to original \textit{Kepler} targets as a function of $Kp$ Mag. The red trend demonstrates the noise contribution due to photon and background noise.}
 	\label{fig:nomotion}
 \end{figure}
@@ -94,7 +94,7 @@ With real \textit{K2} motion applied, sensitivity variation parameters were adju
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=.5\linewidth]{k2_benchmark.pdf}
+	\includegraphics[width=1.0\linewidth]{k2_benchmark.pdf}
 	\caption{CDPP of our simulated light curves with \textit{K2} motion compared to real \textit{K2} targets as a function of $Kp$ Mag.}
 	\label{fig:1motion}
 \end{figure}
@@ -181,7 +181,7 @@ When de-trended with second order PLD, our synthetic light curves align with the
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=.5\linewidth]{detmotion.png}
+	\includegraphics[width=1.0\linewidth]{detmotion.png}
 	\caption{De-trended CDPP for synthetic targets with 1x, 2x, 5x, and 10x motion versus noise of \textit{Kepler} observations as a function of $Kp$ Mag.}
 	\label{fig:detmotion}
 \end{figure}
